<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111111"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarGroup"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:translationY="-56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/previousButton"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/previous_window"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onPreviousButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/next"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onNextButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/previousButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:gravity="center|start"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            android:textIsSelectable="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/keyboardButton"
            app:layout_constraintStart_toEndOf="@+id/nextButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/keyboardButton"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/keyboard"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onKeyboardButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/closeButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_keyboard_24" />

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/close"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onCloseButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_close_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/keyboardToolbar"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:translationY="32dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/controlButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00000000"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onCtrlButton"
            android:text="@string/ctrl"
            android:textColor="@color/colorAccent" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/altButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00000000"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onAltButton"
            android:text="@string/alt"
            android:textColor="@color/colorAccent" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/tabButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/tab"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onTabButton"
            app:srcCompat="@drawable/ic_baseline_keyboard_tab_24" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/pasteButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/paste"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onPasteButton"
            app:srcCompat="@drawable/ic_baseline_content_paste_24" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/terminateButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/terminate"
            android:foreground="?android:attr/selectableItemBackground"
            app:srcCompat="@drawable/ic_baseline_remove_circle_outline_24" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/shutdownButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/shut_down"
            android:foreground="?android:attr/selectableItemBackground"
            app:srcCompat="@drawable/ic_baseline_power_settings_new_24" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/rebootButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/reboot"
            android:foreground="?android:attr/selectableItemBackground"
            app:srcCompat="@drawable/ic_baseline_refresh_24" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>